libsoy/include/soy-1/objects.h


ODE_API void dBodySetMovedCallback(dBodyID b, void (*callback)(dBodyID));
ODE_API dJointID dJointCreateHinge2 (dWorldID, dJointGroupID);
ODE_API dJointID dJointCreateUniversal (dWorldID, dJointGroupID);
ODE_API dJointID dJointCreatePR (dWorldID, dJointGroupID);
  ODE_API dJointID dJointCreatePU (dWorldID, dJointGroupID);
  ODE_API dJointID dJointCreatePiston (dWorldID, dJointGroupID);
ODE_API dJointID dJointCreateFixed (dWorldID, dJointGroupID);
ODE_API dJointID dJointCreateAMotor (dWorldID, dJointGroupID);
ODE_API void dJointDestroy (dJointID);
ODE_API void dJointSetHinge2Anchor (dJointID, dReal x, dReal y, dReal z);
ODE_API void dJointSetHinge2Axis1 (dJointID, dReal x, dReal y, dReal z);
ODE_API void dJointSetHinge2Axis2 (dJointID, dReal x, dReal y, dReal z);
ODE_API void dJointSetHinge2Param (dJointID, int parameter, dReal value);
ODE_API void dJointAddHinge2Torques(dJointID joint, dReal torque1, dReal torque2);
ODE_API void dJointSetUniversalAnchor (dJointID, dReal x, dReal y, dReal z);
ODE_API void dJointSetUniversalAxis1 (dJointID, dReal x, dReal y, dReal z);
ODE_API void dJointSetUniversalAxis1Offset (dJointID, dReal x, dReal y, dReal z,
                                            dReal offset1, dReal offset2);
ODE_API void dJointSetUniversalAxis2 (dJointID, dReal x, dReal y, dReal z);
ODE_API void dJointSetUniversalAxis2Offset (dJointID, dReal x, dReal y, dReal z,
                                            dReal offset1, dReal offset2);
ODE_API void dJointSetUniversalParam (dJointID, int parameter, dReal value);
ODE_API void dJointAddUniversalTorques(dJointID joint, dReal torque1, dReal torque2);
ODE_API void dJointSetPRAnchor (dJointID, dReal x, dReal y, dReal z);
ODE_API void dJointSetPRAxis1 (dJointID, dReal x, dReal y, dReal z);
ODE_API void dJointSetPRAxis2 (dJointID, dReal x, dReal y, dReal z);
ODE_API void dJointSetPRParam (dJointID, int parameter, dReal value);
ODE_API void dJointAddPRTorque (dJointID j, dReal torque);
  ODE_API void dJointSetPUAnchor (dJointID, dReal x, dReal y, dReal z);
  ODE_API void dJointSetPUAnchorOffset (dJointID, dReal x, dReal y, dReal z,
                                       dReal dx, dReal dy, dReal dz);
  ODE_API void dJointSetPUAxis1 (dJointID, dReal x, dReal y, dReal z);
  ODE_API void dJointSetPUAxis2 (dJointID, dReal x, dReal y, dReal z);
  ODE_API void dJointSetPUAxis3 (dJointID, dReal x, dReal y, dReal z);
  ODE_API void dJointSetPUAxisP (dJointID id, dReal x, dReal y, dReal z);
  ODE_API void dJointSetPUParam (dJointID, int parameter, dReal value);
  ODE_API void dJointAddPUTorque (dJointID j, dReal torque);
  ODE_API void dJointSetPistonAnchor (dJointID, dReal x, dReal y, dReal z);
  ODE_API void dJointSetPistonAnchorOffset(dJointID j, dReal x, dReal y, dReal z,
                                           dReal dx, dReal dy, dReal dz);
  ODE_API void dJointSetPistonAxis (dJointID, dReal x, dReal y, dReal z);
  ODE_API void dJointSetPistonParam (dJointID, int parameter, dReal value);
  ODE_API void dJointAddPistonForce (dJointID joint, dReal force);
ODE_API void dJointSetFixed (dJointID);
ODE_API void dJointSetFixedParam (dJointID, int parameter, dReal value);
ODE_API void dJointSetAMotorNumAxes (dJointID, int num);
ODE_API void dJointSetAMotorAxis (dJointID, int anum, int rel,
			  dReal x, dReal y, dReal z);
ODE_API void dJointSetAMotorAngle (dJointID, int anum, dReal angle);
ODE_API void dJointSetAMotorParam (dJointID, int parameter, dReal value);
ODE_API void dJointSetAMotorMode (dJointID, int mode);
ODE_API void dJointAddAMotorTorques (dJointID, dReal torque1, dReal torque2, dReal torque3);
ODE_API void dJointGetHinge2Anchor (dJointID, dVector3 result);
ODE_API void dJointGetHinge2Anchor2 (dJointID, dVector3 result);
ODE_API void dJointGetHinge2Axis1 (dJointID, dVector3 result);
ODE_API void dJointGetHinge2Axis2 (dJointID, dVector3 result);
ODE_API dReal dJointGetHinge2Param (dJointID, int parameter);
ODE_API dReal dJointGetHinge2Angle1 (dJointID);
ODE_API dReal dJointGetHinge2Angle1Rate (dJointID);
ODE_API dReal dJointGetHinge2Angle2Rate (dJointID);
ODE_API void dJointGetUniversalAnchor (dJointID, dVector3 result);
ODE_API void dJointGetUniversalAnchor2 (dJointID, dVector3 result);
ODE_API void dJointGetUniversalAxis1 (dJointID, dVector3 result);
ODE_API void dJointGetUniversalAxis2 (dJointID, dVector3 result);
ODE_API dReal dJointGetUniversalParam (dJointID, int parameter);
ODE_API void dJointGetUniversalAngles (dJointID, dReal *angle1, dReal *angle2);
ODE_API dReal dJointGetUniversalAngle1 (dJointID);
ODE_API dReal dJointGetUniversalAngle2 (dJointID);
ODE_API dReal dJointGetUniversalAngle1Rate (dJointID);
ODE_API dReal dJointGetUniversalAngle2Rate (dJointID);
ODE_API void dJointGetPRAnchor (dJointID, dVector3 result);
ODE_API dReal dJointGetPRPosition (dJointID);
ODE_API dReal dJointGetPRPositionRate (dJointID);
ODE_API dReal dJointGetPRAngle (dJointID);
ODE_API dReal dJointGetPRAngleRate (dJointID);
ODE_API void dJointGetPRAxis1 (dJointID, dVector3 result);
ODE_API void dJointGetPRAxis2 (dJointID, dVector3 result);
ODE_API dReal dJointGetPRParam (dJointID, int parameter);
  ODE_API void dJointGetPUAnchor (dJointID, dVector3 result);
  ODE_API dReal dJointGetPUPosition (dJointID);
  ODE_API dReal dJointGetPUPositionRate (dJointID);
  ODE_API void dJointGetPUAxis1 (dJointID, dVector3 result);
  ODE_API void dJointGetPUAxis2 (dJointID, dVector3 result);
  ODE_API void dJointGetPUAxis3 (dJointID, dVector3 result);
  ODE_API void dJointGetPUAxisP (dJointID id, dVector3 result);
  ODE_API void dJointGetPUAngles (dJointID, dReal *angle1, dReal *angle2);
  ODE_API dReal dJointGetPUAngle1 (dJointID);
  ODE_API dReal dJointGetPUAngle1Rate (dJointID);
  ODE_API dReal dJointGetPUAngle2 (dJointID);
  ODE_API dReal dJointGetPUAngle2Rate (dJointID);
  ODE_API dReal dJointGetPUParam (dJointID, int parameter);
  ODE_API dReal dJointGetPistonPosition (dJointID);
  ODE_API dReal dJointGetPistonPositionRate (dJointID);
  ODE_API dReal dJointGetPistonAngle (dJointID);
  ODE_API dReal dJointGetPistonAngleRate (dJointID);
  ODE_API void dJointGetPistonAnchor (dJointID, dVector3 result);
  ODE_API void dJointGetPistonAnchor2 (dJointID, dVector3 result);
  ODE_API void dJointGetPistonAxis (dJointID, dVector3 result);
  ODE_API dReal dJointGetPistonParam (dJointID, int parameter);
ODE_API int dJointGetAMotorNumAxes (dJointID);
ODE_API void dJointGetAMotorAxis (dJointID, int anum, dVector3 result);
ODE_API int dJointGetAMotorAxisRel (dJointID, int anum);
ODE_API dReal dJointGetAMotorAngle (dJointID, int anum);
ODE_API dReal dJointGetAMotorAngleRate (dJointID, int anum);
ODE_API dReal dJointGetFixedParam (dJointID, int parameter);