libsoy/vapi/ode-0.11.vapi


        [Compact]
        [CCode (cname="struct dxJoint", cprefix="dJoint",
                free_function="dJointDestroy")]
        public class Hinge2 : Joint {
            [CCode (cname = "dJointCreateHinge2")]
            public Hinge2 (World world, JointGroup? group);

            [CCode (cname = "dJointSetHinge2Anchor")]
            public void SetAnchor (Real x, Real y, Real z);

            [CCode (cname = "dJointSetHinge2Axis1")]
            public void SetAxis1 (Real x, Real y, Real z);

            [CCode (cname = "dJointSetHinge2Axis2")]
            public void SetAxis2 (Real x, Real y, Real z);

            [CCode (cname = "dJointSetHinge2Param")]
            public void SetParam (int parameter, Real value);

            [CCode (cname = "dJointAddHinge2Torques")]
            public void AddTorques(Real torque1, Real torque2);

            [CCode (cname = "dJointGetHinge2Anchor")]
            public void GetAnchor (Vector3 result);

            [CCode (cname = "dJointGetHinge2Anchor2")]
            public void GetAnchor2 (Vector3 result);

            [CCode (cname = "dJointGetHinge2Axis1")]
            public void GetAxis1 (Vector3 result);

            [CCode (cname = "dJointGetHinge2Axis2")]
            public void GetAxis2 (Vector3 result);

            [CCode (cname = "dJointGetHinge2Param")]
            public Real GetParam (int parameter);

            [CCode (cname = "dJointGetHinge2Angle1")]
            public Real GetAngle1 ( );

            [CCode (cname = "dJointGetHinge2Angle1Rate")]
            public Real GetAngle1Rate ( );

            [CCode (cname = "dJointGetHinge2Angle2Rate")]
            public Real GetAngle2Rate ( );
        }

        [Compact]
        [CCode (cname="struct dxJoint", cprefix="dJoint",
                free_function="dJointDestroy")]
        public class Universal : Joint {
            [CCode (cname = "dJointCreateUniversal")]
            public Universal (World world, JointGroup? group);

            [CCode (cname = "dJointSetUniversalAnchor")]
            public void SetAnchor (Real x, Real y, Real z);

            [CCode (cname = "dJointSetUniversalAxis1")]
            public void SetAxis1 (Real x, Real y, Real z);

            [CCode (cname = "dJointSetUniversalAxis1Offset")]
            public void SetAxis1Offset (Real x, Real y, Real z,
                                        Real offset1, Real offset2);

            [CCode (cname = "dJointSetUniversalAxis2")]
            public void SetAxis2 (Real x, Real y, Real z);

            [CCode (cname = "dJointSetUniversalAxis2Offset")]
            public void SetAxis2Offset (Real x, Real y, Real z,
                                        Real offset1, Real offset2);

            [CCode (cname = "dJointSetUniversalParam")]
            public void SetParam (int parameter, Real value);

            [CCode (cname = "dJointAddUniversalTorques")]
            public void AddTorques(Real torque1, Real torque2);

            [CCode (cname = "dJointGetUniversalAnchor")]
            public void GetAnchor (Vector3 result);

            [CCode (cname = "dJointGetUniversalAnchor2")]
            public void GetAnchor2 (Vector3 result);

            [CCode (cname = "dJointGetUniversalAxis1")]
            public void GetAxis1 (Vector3 result);

            [CCode (cname = "dJointGetUniversalAxis2")]
            public void GetAxis2 (Vector3 result);

            [CCode (cname = "dJointGetUniversalParam")]
            public Real GetParam (int parameter);

            [CCode (cname = "dJointGetUniversalAngles")]
            public void GetAngles (Real* angle1, Real* angle2);

            [CCode (cname = "dJointGetUniversalAngle1")]
            public Real GetAngle1 ( );

            [CCode (cname = "dJointGetUniversalAngle2")]
            public Real GetAngle2 ( );

            [CCode (cname = "dJointGetUniversalAngle1Rate")]
            public Real GetAngle1Rate ( );

            [CCode (cname = "dJointGetUniversalAngle2Rate")]
            public Real GetAngle2Rate ( );
        }

        [Compact]
        [CCode (cname="struct dxJoint", cprefix="dJoint",
                free_function="dJointDestroy")]
        public class PrismaticRotoide : Joint {
            [CCode (cname = "dJointCreatePR")]
            public PrismaticRotoide (World world, JointGroup? group);

            [CCode (cname = "dJointSetPRAnchor")]
            public void SetAnchor (Real x, Real y, Real z);

            [CCode (cname = "dJointSetPRAxis1")]
            public void SetAxis1 (Real x, Real y, Real z);

            [CCode (cname = "dJointSetPRAxis2")]
            public void SetAxis2 (Real x, Real y, Real z);

            [CCode (cname = "dJointSetPRParam")]
            public void SetParam (int parameter, Real value);

            [CCode (cname = "dJointAddPRTorque")]
            public void AddTorque (Real torque);

            [CCode (cname = "dJointGetPRAnchor")]
            public void GetAnchor (Vector3 result);

            [CCode (cname = "dJointGetPRPosition")]
            public Real GetPosition ( );

            [CCode (cname = "dJointGetPRPositionRate")]
            public Real GetPositionRate ( );

            [CCode (cname = "dJointGetPRAngle")]
            public Real GetAngle ( );

            [CCode (cname = "dJointGetPRAngleRate")]
            public Real GetAngleRate ( );

            [CCode (cname = "dJointGetPRAxis1")]
            public void GetAxis1 (Vector3 result);

            [CCode (cname = "dJointGetPRAxis2")]
            public void GetAxis2 (Vector3 result);

            [CCode (cname = "dJointGetPRParam")]
            public Real GetParam (int parameter);
        }

        [Compact]
        [CCode (cname="struct dxJoint", cprefix="dJoint",
                free_function="dJointDestroy")]
        public class PrismaticUniversal : Joint {
            [CCode (cname = "dJointCreatePU")]
            public PrismaticUniversal (World world, JointGroup? group);

            [CCode (cname = "dJointSetPUAnchor")]
            public void SetAnchor (Real x, Real y, Real z);

            [CCode (cname = "dJointSetPUAnchorOffset")]
            public void SetAnchorOffset (Real  x, Real  y, Real  z,
                                         Real dx, Real dy, Real dz);

            [CCode (cname = "dJointSetPUAxis1")]
            public void SetAxis1 (Real x, Real y, Real z);

            [CCode (cname = "dJointSetPUAxis2")]
            public void SetAxis2 (Real x, Real y, Real z);

            [CCode (cname = "dJointSetPUAxis3")]
            public void SetAxis3 (Real x, Real y, Real z);

            [CCode (cname = "dJointSetPUAxisP")]
            public void SetAxisP (Real x, Real y, Real z);

            [CCode (cname = "dJointSetPUParam")]
            public void SetParam (int parameter, Real value);

            [CCode (cname = "dJointAddPUTorque")]
            public void AddTorque (Real torque);

            [CCode (cname = "dJointGetPUAnchor")]
            public void GetAnchor (Vector3 result);

            [CCode (cname = "dJointGetPUPosition")]
            public Real GetPosition ( );

            [CCode (cname = "dJointGetPUPositionRate")]
            public Real GetPositionRate ( );

            [CCode (cname = "dJointGetPUAxis1")]
            public void GetAxis1 (Vector3 result);

            [CCode (cname = "dJointGetPUAxis2")]
            public void GetAxis2 (Vector3 result);

            [CCode (cname = "dJointGetPUAxis3")]
            public void GetAxis3 (Vector3 result);

            [CCode (cname = "dJointGetPUAxisP")]
            public void GetAxisP (Vector3 result);

            [CCode (cname = "dJointGetPUAngles")]
            public void GetAngles (Real* angle1, Real* angle2);

            [CCode (cname = "dJointGetPUAngle1")]
            public Real GetAngle1 ( );

            [CCode (cname = "dJointGetPUAngle1Rate")]
            public Real GetAngle1Rate ( );

            [CCode (cname = "dJointGetPUAngle2")]
            public Real GetAngle2 ( );

            [CCode (cname = "dJointGetPUAngle2Rate")]
            public Real GetAngle2Rate ( );

            [CCode (cname = "dJointGetPUParam")]
            public Real GetParam (int parameter);
        }

        [Compact]
        [CCode (cname="struct dxJoint", cprefix="dJoint",
                free_function="dJointDestroy")]
        public class Piston : Joint {
            [CCode (cname = "dJointCreatePiston")]
            public Piston (World world, JointGroup? group);

            [CCode (cname = "dJointSetPistonAnchor")]
            public void SetAnchor (Real x, Real y, Real z);

            [CCode (cname = "dJointSetPistonAnchorOffset")]
            public void SetAnchorOffset(Real  x, Real  y, Real  z,
                                        Real dx, Real dy, Real dz);

            [CCode (cname = "dJointSetPistonAxis")]
            public void SetAxis (Real x, Real y, Real z);

            [CCode (cname = "dJointSetPistonParam")]
            public void SetParam (int parameter, Real value);

            [CCode (cname = "dJointAddPistonForce")]
            public void AddForce (Real force);

            [CCode (cname = "dJointGetPistonPosition")]
            public Real GetPosition ( );

            [CCode (cname = "dJointGetPistonPositionRate")]
            public Real GetPositionRate ( );

            [CCode (cname = "dJointGetPistonAngle")]
            public Real GetAngle ( );

            [CCode (cname = "dJointGetPistonAngleRate")]
            public Real GetAngleRate ( );

            [CCode (cname = "dJointGetPistonAnchor")]
            public void GetAnchor (Vector3 result);

            [CCode (cname = "dJointGetPistonAnchor2")]
            public void GetAnchor2 (Vector3 result);

            [CCode (cname = "dJointGetPistonAxis")]
            public void GetAxis (Vector3 result);

            [CCode (cname = "dJointGetPistonParam")]
            public Real GetParam (int parameter);
        }

        [Compact]
        [CCode (cname="struct dxJoint", cprefix="dJoint",
                free_function="dJointDestroy")]
        public class Fixed : Joint {
            [CCode (cname = "dJointCreateFixed")]
            public Fixed (World world, JointGroup? group);

            [CCode (cname = "dJointSetFixed")]
            public void Set ( );

            [CCode (cname = "dJointSetFixedParam")]
            public void SetParam (int parameter, Real value);

            [CCode (cname = "dJointGetFixedParam")]
            public Real GetParam (int parameter);
        }

        [Compact]
        [CCode (cname="struct dxJoint", free_function="dJointDestroy")]
        public class AMotor : Joint {
            [CCode (cname = "dJointCreateAMotor")]
            public AMotor (World world, JointGroup? group);

            [CCode (cname = "dJointSetAMotorNumAxes")]
            public void SetNumAxes (int num);

            [CCode (cname = "dJointSetAMotorAxis")]
            public void SetAxis (int anum, int rel, Real x, Real y, Real z);

            [CCode (cname = "dJointSetAMotorAngle")]
            public void SetAngle (int anum, Real angle);

            [CCode (cname = "dJointSetAMotorParam")]
            public void SetParam (int parameter, Real value);

            [CCode (cname = "dJointSetAMotorMode")]
            public void SetMode (int mode);

            [CCode (cname = "dJointAddAMotorTorques")]
            public void AddTorques (Real torque1, Real torque2, Real torque3);

            [CCode (cname = "dJointGetAMotorNumAxes")]
            public int GetNumAxes ( );

            [CCode (cname = "dJointGetAMotorAxis")]
            public void GetAxis (int anum, Vector3 result);

            [CCode (cname = "dJointGetAMotorAxisRel")]
            public int GetAxisRel (int anum);

            [CCode (cname = "dJointGetAMotorAngle")]
            public Real GetAngle (int anum);

            [CCode (cname = "dJointGetAMotorAngleRate")]
            public Real GetAngleRate (int anum);
